# app

./: index.html  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  lib.rs  llama.rs  log.rs  main.rs  transcribe.rs  whisper.rs  ytdlp.rs
